Melhorias no tratamento de exceções

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
+
+contacts.regex.contact.name=[A-Zаимсзцуб\\s]{10,}
+contacts.regex.contact.cpf=[0-9]{11}
+contacts.regex.address.zipcode=\\d{5}-\\d{3}
+contacts.regex.phone.fix=[2-5]\\d{7}
+contacts.regex.phone.mobile=9\\d{8}
+contacts.regex.phone.ddi=\\d{1,3}
+contacts.regex.phone.ddd=\\d{1,2}
