Início dos testes unitários e algumas correções gerais

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+// SPRING
 spring.datasource.url=jdbc:h2:file:C:\\data\\everis_contacts
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -6,6 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 
+// CONTACTS REGEX
 contacts.regex.contact.name=[A-Zаимсзцуб\\s]{10,}
 contacts.regex.contact.cpf=[0-9]{11}
 contacts.regex.address.zipcode=\\d{5}-\\d{3}
